# python-summary-week-raport-moto

./: pyproject.toml  stucture
src/reports/: config.py
