[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-summary-week-raport-moto"
version = "0.1.0"
authors = [{name = "Szymon", email = "paluchszymon236@gmail.com"}]
description = "Generator tygodniowych raportów sprzedażowych Motorola SalesUp"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "click>=8.1",
]

[project.scripts]
raport-moto = "reports.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "pre-commit>=3.0",
]

[tool.hatch.version]
path = "src/reports/__init__.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
